* deprecation
  * devise :all is deprecated

* enhancements
  * Added devise lockable (by github/mhfs)
  * Warden 0.9.0 compatibility
  * Mongomapper 0.6.10 compatibility

* bug fix
  * Accept path prefix not starting with slash
  * url helpers should rely on find_scope!

== 0.8.2

* enhancements
  * Allow Devise.mailer_sender to be a proc (by github/grimen)

* bug fix
  * Fix bug with passenger, update is required to anyone deploying on passenger (by github/dvdpalm)

== 0.8.1

* enhancements
  * Move salt to encryptors
  * Devise::Lockable
  * Moved view links into partial and I18n'ed them

* bug fix
  * Bcrypt generator was not being loaded neither setting the proper salt

== 0.8.0

* enhancements
  * Warden 0.8.0 compatibility
  * Add an easy for map.connect "sign_in", :controller => "sessions", :action => "new" to work
  * Added :bcrypt encryptor (by github.com/capotej)

* bug fix
  * sign_in_count is also increased when user signs in via password change, confirmation, etc..
  * More DataMapper compatibility (by github.com/lancecarlson)

* deprecation
  * Removed DeviseMailer.sender

== 0.7.5

* enhancements
  * Set a default value for mailer to avoid find_template issues
  * Add models configuration to MongoMapper::EmbeddedDocument as well

== 0.7.4

* enhancements
  * Extract Activatable from Confirmable
  * Decouple Serializers from Devise modules

== 0.7.3

* bug fix
  * Give scope to the proper model validation

* enhancements
  * Mail views are scoped as well
  * Added update_with_password for authenticatable
  * Allow render_with_scope to accept :controller option

== 0.7.2

* deprecation
  * Renamed reset_confirmation! to resend_confirmation!
  * Copying locale is part of the installation process

* bug fix
  * Fixed render_with_scope to work with all controllers
  * Allow sign in with two different users in Devise::TestHelpers

== 0.7.1

* enhancements
  * Small enhancements for other plugins compatibility (by github.com/grimen)

== 0.7.0
