@@ -7,7 +7,7 @@ class SessionsController < ApplicationController
   # GET /resource/sign_in
   def new
     Devise::FLASH_MESSAGES.each do |message|
-      set_now_flash_message :failure, message if params.try(:[], message) == "true"
+      set_now_flash_message :alert, message if params.try(:[], message) == "true"
     end
     super
   end
@@ -15,10 +15,10 @@ class SessionsController < ApplicationController
   # POST /resource/sign_in
   def create
     if resource = authenticate(resource_name)
-      set_flash_message :success, :signed_in
+      set_flash_message :notice, :signed_in
       sign_in_and_redirect(resource_name, resource, true)
     else
-      set_now_flash_message :failure, warden.message || :invalid
+      set_now_flash_message :alert, warden.message || :invalid
       build_resource
       render_with_scope :new
     end
@@ -26,7 +26,7 @@ class SessionsController < ApplicationController
 
   # GET /resource/sign_out
   def destroy
-    set_flash_message :success, :signed_out if signed_in?(resource_name)
+    set_flash_message :notice, :signed_out if signed_in?(resource_name)
     sign_out_and_redirect(resource_name)
   end
 
